Changed scaling of employment headers to improve appearance on mobile

--- a/Styles.css
+++ b/Styles.css
@@ -3,7 +3,7 @@ div.container {
 }
 
 div.employment-header > div{
-    font-size: 1em;
+    font-size: 1.8vh;
     font-weight: bolder;
     display: block;
 }
